# hy_basic_django4client

./: README.md
django/: README.md  pyproject.toml
django/hy_basic_django4client/: config.py  jwt.py
flutter/: README.md  pubspec.yaml
flutter/android/: local.properties
flutter/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
flutter/lib/hy_basic_flutter4django/: network.dart  widgets.dart
flutter/test/: widget_test.dart
hy_basic_django4client/: config.py  jwt.py
