[project]
name = "hy_basic_django4client"
version = "0.1.0"
description = "A small library to integrate JWT authentication and Whitenoise with Django."
authors = [
    {name = "Andrea Antonello", email = "andrea.antonello@gmail.com"},
]
dependencies = [
    "Django>=4.2.7",
    'djangorestframework',
    'djangorestframework-simplejwt',
    'django-cors-headers',
    'whitenoise',
]
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
